将文件存储从本地改为minio